--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
@@ -25,6 +28,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "dotenv-webpack": "^1.7.0",
     "mini-css-extract-plugin": "^0.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
