--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "bem-modifiers": "^1.0.7",
     "dotenv-webpack": "^1.7.0",
     "mini-css-extract-plugin": "^0.9.0",
     "react": "^16.12.0",
