--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "jest": "^25.1.0",
+    "nock": "^11.8.2",
     "node-sass": "^4.13.1",
     "react-redux": "^7.1.3",
     "react-test-renderer": "^16.12.0",
